
[package]
name = "muehle_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ggez = {version = "0.9.3", resources = "resources" }
itertools = "0.13.0"
rand = "0.8.5"
regex = "1.10.6"
rayon = "1.10.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = "full"
