[package]
name = "muehle_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
good-web-game = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13.0"
rayon = "1.10.0"
miniquad = "=0.3.13"

[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = "full"